10152
Oh, and that patch isn't actually enough for your first reported problem:
```scala
% qbin/scalac sandbox/test.scala
sandbox/test.scala:2: error: not found: value bong
  def booboo = bong + booble + bippity - bazingo
               ^
```
